[package]
name = "cat-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
serde = "1.0.163"
serde_json = "1.0.96"
serenity = {version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.1",  features=["full"]}
