[package]
name = "catbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
# blake2 = "0.10.6"
#notify = "6.0.0"
#serde = "1.0.163"
#serde_json = "1.0.96"
#serenity = {version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.1",  features=["full"]}
#bytes = "1.4.0"
#enum-display = "0.1.3"
#once_cell = "1.17.1"
#tokio-cron-scheduler = "0.9.4"